--- a/integration_test/Cargo.toml
+++ b/integration_test/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
-name = "integration_test_async"
-version = "0.1.0"
 authors = ["Jeremy Rubin <j@rubin.io>", "Steven Roose <steven@stevenroose.org>"]
-edition="2018"
-publish=false
+edition = "2018"
+name = "integration_test_async"
+publish = false
+version = "0.1.0"
 
 [dependencies]
-bitcoincore-rpc-async = { package = "bitcoincore-rpc-async2", path = "../client" }
-bitcoin = { version = "0.29.0", features = [ "serde", "rand" ] }
+bitcoin = {git = "https://github.com/boolnetwork/rust-dogecoin", rev = "c976a25"}
+bitcoincore-rpc-async = {package = "bitcoincore-rpc-async2", path = "../client"}
 lazy_static = "1.4.0"
 log = "0.4"
-tokio = { version = "1", features = ["full"] }
+tokio = {version = "1", features = ["full"]}
